--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ windows-service = "0.4.0"
 winapi = { git = "https://github.com/retep998/winapi-rs", branch="0.3", features = ["errhandlingapi", "winbase", "wtsapi32", "securitybaseapi", "handleapi"] }
 
 [[bin]]
-name = "daemonize"
+name = "daemonizer"
 path = "src/main.rs"
