--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ lazy_static = "1.4.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-service = "0.4.0"
-winapi = { git = "https://github.com/retep998/winapi-rs", branch="0.3", features = ["errhandlingapi", "winbase", "wtsapi32", "securitybaseapi", "handleapi"] }
+winapi = { version = "0.3.9", features = ["errhandlingapi", "winbase", "wtsapi32", "securitybaseapi", "handleapi"] }
+win32job = "1.0.1"
 
 [[bin]]
 name = "daemonizer"
