--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ lazy_static = "1.4.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-service = "0.4.0"
-winapi = { version = "0.3.9", features = ["errhandlingapi", "winbase", "wtsapi32", "securitybaseapi", "handleapi"] }
+winapi = { version = "0.2"}
 win32job = "1.0.1"
+kernel32-sys = "0.2.2"
 
 [[bin]]
 name = "daemonizer"
